syntax = "proto3";

package api.synerex;

option go_package="github.com/synerex/synerex_alpha/api/simulation/synerex";

import "simulation/agent/agent.proto";
import "simulation/area/area.proto";
import "simulation/clock/clock.proto";
import "simulation/participant/participant.proto";

message SimDemand {
        // participant info
        DemandType demand_type = 1;

        // meta data
        StatusType status_type = 2;
	    string meta = 3;

		// demand data
        oneof data {
            agent.GetSameAreaAgentsRequest get_same_area_agents_request = 4;
			agent.SetAgentsRequest set_agents_request = 5;
			agent.VisualizeAgentsRequest visualise_agents_request = 6;
			area.GetAreaRequest get_area_request = 7;
			participant.RegistParticipantRequest resist_participant_request = 8;
			participant.SetParticipantsRequest set_participants_request = 9;
			clock.GetClockRequest get_clock_request = 10;
			clock.SetClockRequest set_clock_request = 11;
			clock.StartClockRequest start_clock_request = 12;
			clock.StopClockRequest stop_clock_request = 13;
			clock.ForwardClockRequest forward_clock_request = 14;
			clock.BackClockRequest back_clock_request = 15;
        }
    }

 message SimSupply {
        // demand type
        SupplyType supply_type = 1;

        // meta data
        StatusType status_type = 2;
        string meta = 3;

		// supply data
        oneof data {
            agent.GetSameAreaAgentsResponse get_same_area_agents_response = 4;
			agent.GetNeighborAreaAgentsResponse get_neighbor_area_agents_response = 5;
			agent.SetAgentsResponse set_agents_response = 6;
			area.GetAreaResponse get_area_response = 7;
			participant.RegistParticipantResponse regist_participant_response = 8;
			participant.SetParticipantsResponse set_participants_response = 9;
			clock.GetClockResponse get_clock_response = 10;
			clock.SetClockResponse set_clock_response = 11;
			clock.StartClockResponse start_clock_response = 12;
			clock.StopClockResponse stop_clock_response = 13;
			clock.ForwardClockResponse forward_clock_response = 14;
			clock.BackClockResponse back_clock_response = 15;
        }
    }

enum StatusType {
    OK = 0;
    NG = 1;
    NONE = 2;
}

enum DemandType {
    GET_SAME_AREA_AGENTS_REQUEST = 0;
    SET_AGENTS_REQUEST = 1;
    VISUALIZE_AGENTS_REQUEST = 2;
    GET_AREA_REQUEST = 3;
	RESIST_PARTICIPANT_REQUEST = 4;
	SET_PARTICIPANTS_REQUEST = 5;
	GET_CLOCK_REQUEST = 6;
	SET_CLOCK_REQUEST = 7;
	START_CLOCK_REQUEST = 8;
	STOP_CLOCK_REQUEST = 9;
	FORWARD_CLOCK_REQUEST = 10;
	BACK_CLOCK_REQUEST = 11;
}

enum SupplyType {
    GET_SAME_AREA_AGENTS_RESPONSE = 0;
	GET_NEIGHBOR_AREA_AGENTS_RESPONSE = 1;
    SET_AGENTS_RESPONSE = 2;
    GET_AREA_RESPONSE = 3;
	RESIST_PARTICIPANT_RESPONSE = 4;
	SET_PARTICIPANTS_RESPONSE = 5;
	GET_CLOCK_RESPONSE = 6;
	SET_CLOCK_RESPONSE = 7;
	START_CLOCK_RESPONSE = 8;
	STOP_CLOCK_RESPONSE = 9;
	FORWARD_CLOCK_RESPONSE = 10;
	BACK_CLOCK_RESPONSE = 11;
}


